# Personal-Git

./: .gitignore  README.md  find_bash_path.py  personal-git.py  personal-git.spec  pyproject.toml  requirements.txt
MyWidgets/: BashWindow.py  GithubBrowserWindow.py  KeyLineEdit.py  MessageBlock.py  MessageListWidgetItem.py  SubprocessThread.py
